clusters/apps/db/postgresql-namesapce.yml
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql-pvc
  labels:
    toolkit.fluxcd.io/tenant: dev-team
