clusters/apps/db/postgresql-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-deployment
  namespace: cnpg-system
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.4
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-volume
