clusters/apps/db/postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: cnpg-system
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
---
